# bruh

./: .deeptxtignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROAD_MAP.md  SECURITY.md  build.rs  deep.rs  deep.sh  install.ps1  install.sh
.github/workflows/: release.yml
bruh-web/: Cargo.toml  README.md
bruh-web/src/: db.rs  layout.rs  main.rs
bruh-web/src/pages/: home.rs
bruh-web/static/: style.css
examples/: demo.sh
hooks/: post-commit
src/: lib.rs  main.rs  main.rs.orig  main.rs.patch  main.rs.rej
src/cli/: buffer.rs  config.rs  config_cli.rs  explain.rs  forget.rs  improve.rs  init.rs  managers.rs  mod.rs  output.rs  providers.rs  query.rs  stats.rs  status.rs  watch.rs
src/cognee/: forget.rs  improve.rs  ingest.rs  mod.rs  mod.rs.patch  query.rs
src/daemon/: buffer.rs  cursor.rs  discovery.rs  git.rs  mod.rs  mod.rs.orig  mod.rs.patch  mod.rs.rej  packages.rs  shell.rs
src/discovery/: cache.rs  extractor.rs  mod.rs  register.rs
src/discovery/providers/: claude.rs  gemini.rs  groq.rs  mod.rs
src/events/: mod.rs  schema.rs
tests/: integration.rs
